--- a/environment.yml
+++ b/environment.yml
@@ -2,14 +2,18 @@ name: maskify
 channels:
   - defaults
   - conda-forge  
+  - pytorch
 dependencies:
   - python=3.9
+  - pytorch==1.11.0
+  - torchvision==0.12.0
   - opencv
   - numpy
   - pillow  
-  - matplotlib
   - plotly
   - pip
   - pip:
       - git+https://github.com/huggingface/transformers
       - requests
+      - pandas
+      - matplotlib
