--- a/environment.yml
+++ b/environment.yml
@@ -1,19 +1,202 @@
-name: maskify  
+name: maskify
 channels:
+  - conda-forge
   - defaults
-  - conda-forge  
-  - pytorch
 dependencies:
-  - python=3.9
-  - pytorch==1.11.0
-  - torchvision==0.12.0
-  - opencv
-  - numpy
-  - pillow  
-  - plotly
-  - pip
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - ca-certificates=2024.7.4=hbcca054_0
+  - comm=0.2.2=pyhd8ed1ab_0
+  - debugpy=1.6.7=py39h6a678d5_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_0
+  - executing=2.0.1=pyhd8ed1ab_0
+  - importlib-metadata=8.2.0=pyha770c72_0
+  - importlib_metadata=8.2.0=hd8ed1ab_0
+  - ipykernel=6.29.5=pyh3099207_0
+  - ipython=8.18.1=pyh707e725_3
+  - jedi=0.19.1=pyhd8ed1ab_0
+  - jupyter_client=8.6.2=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=py39hf3d152e_0
+  - ld_impl_linux-64=2.38=h1181459_1
+  - libffi=3.4.4=h6a678d5_1
+  - libgcc-ng=14.1.0=h77fa898_0
+  - libgomp=14.1.0=h77fa898_0
+  - libsodium=1.0.18=h36c2ea0_1
+  - libstdcxx-ng=11.2.0=h1234567_1
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_0
+  - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - openssl=3.3.1=h4bc722e_2
+  - packaging=24.1=pyhd8ed1ab_0
+  - parso=0.8.4=pyhd8ed1ab_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pip=24.2=py39h06a4308_0
+  - platformdirs=4.2.2=pyhd8ed1ab_0
+  - prompt-toolkit=3.0.47=pyha770c72_0
+  - psutil=6.0.0=py39hd3abc70_0
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pure_eval=0.2.3=pyhd8ed1ab_0
+  - pygments=2.18.0=pyhd8ed1ab_0
+  - python=3.9.19=h955ad1f_1
+  - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python_abi=3.9=2_cp39
+  - pyzmq=25.1.2=py39h6a678d5_0
+  - readline=8.2=h5eee18b_0
+  - setuptools=72.1.0=py39h06a4308_0
+  - six=1.16.0=pyh6c4a22f_0
+  - sqlite=3.45.3=h5eee18b_0
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - tk=8.6.14=h39e8969_0
+  - tornado=6.4.1=py39hd3abc70_0
+  - traitlets=5.14.3=pyhd8ed1ab_0
+  - typing_extensions=4.12.2=pyha770c72_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
+  - wheel=0.43.0=py39h06a4308_0
+  - xz=5.4.6=h5eee18b_1
+  - zeromq=4.3.5=h6a678d5_0
+  - zipp=3.20.0=pyhd8ed1ab_0
+  - zlib=1.2.13=h5eee18b_1
   - pip:
-      - git+https://github.com/huggingface/transformers
-      - requests
-      - pandas
-      - matplotlib
+      - addict==2.4.0
+      - antlr4-python3-runtime==4.9.3
+      - asciitree==0.3.3
+      - attrs==24.2.0
+      - bleach==6.2.0
+      - blinker==1.8.2
+      - bokeh==3.4.3
+      - braceexpand==0.1.7
+      - certifi==2024.7.4
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - cmake==3.30.2
+      - cmeel==0.53.3
+      - cmeel-assimp==5.3.1
+      - cmeel-boost==1.83.0
+      - cmeel-console-bridge==1.0.2.2
+      - cmeel-octomap==1.9.8.2
+      - cmeel-qhull==8.0.2.1
+      - cmeel-tinyxml==2.6.2.3
+      - cmeel-urdfdom==3.1.1.1
+      - configargparse==1.7
+      - contourpy==1.2.1
+      - cycler==0.12.1
+      - dash==2.17.1
+      - dash-core-components==2.0.0
+      - dash-html-components==2.0.0
+      - dash-table==5.0.0
+      - eigenpy==3.5.1
+      - fasteners==0.19
+      - fastjsonschema==2.20.0
+      - filelock==3.15.4
+      - flask==3.0.3
+      - fonttools==4.53.1
+      - fsspec==2024.6.1
+      - h11==0.14.0
+      - hpp-fcl==2.4.4
+      - huggingface-hub==0.24.6
+      - idna==3.7
+      - imageio==2.35.1
+      - importlib-resources==6.4.3
+      - ipywidgets==8.1.3
+      - itsdangerous==2.2.0
+      - jinja2==3.1.4
+      - joblib==1.4.2
+      - jsonschema==4.23.0
+      - jsonschema-specifications==2023.12.1
+      - jupyterlab-widgets==3.0.11
+      - kaggle==1.6.17
+      - kagglehub==0.3.4
+      - kiwisolver==1.4.5
+      - lit==18.1.8
+      - markupsafe==2.1.5
+      - matplotlib==3.9.2
+      - megapose==1.0
+      - mpmath==1.3.0
+      - nbformat==5.10.4
+      - networkx==3.2.1
+      - numcodecs==0.12.1
+      - numpy==1.26.4
+      - nvidia-cublas-cu11==11.10.3.66
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu11==11.7.101
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu11==11.7.99
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu11==11.7.99
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu11==8.5.0.96
+      - nvidia-cudnn-cu12==9.1.0.70
+      - nvidia-cufft-cu11==10.9.0.58
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu11==10.2.10.91
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu11==11.4.0.1
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu11==11.7.4.91
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu11==2.14.3
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.6.20
+      - nvidia-nvtx-cu11==11.7.91
+      - nvidia-nvtx-cu12==12.1.105
+      - omegaconf==2.3.0
+      - open3d==0.18.0
+      - opencv-python==4.10.0.84
+      - outcome==1.3.0.post0
+      - panda3d==1.10.14
+      - pandas==2.2.2
+      - pillow==10.4.0
+      - pin==2.7.0
+      - plotly==5.23.0
+      - pyparsing==3.1.2
+      - pypng==0.20220715.0
+      - pyquaternion==0.9.9
+      - pysocks==1.7.1
+      - python-slugify==8.0.4
+      - pytz==2024.1
+      - pyyaml==6.0.2
+      - referencing==0.35.1
+      - regex==2024.7.24
+      - requests==2.32.3
+      - retrying==1.3.4
+      - roma==1.5.0
+      - rpds-py==0.20.0
+      - safetensors==0.4.4
+      - scikit-learn==1.5.1
+      - scipy==1.13.1
+      - seaborn==0.13.2
+      - selenium==4.23.1
+      - setuptools-scm==8.1.0
+      - simplejson==3.19.3
+      - sniffio==1.3.1
+      - sortedcontainers==2.4.0
+      - sympy==1.13.2
+      - tenacity==9.0.0
+      - text-unidecode==1.3
+      - threadpoolctl==3.5.0
+      - tokenizers==0.19.1
+      - tomli==2.0.1
+      - torch==2.0.0
+      - torchaudio==2.0.0
+      - torchvision==0.15.1
+      - tqdm==4.66.5
+      - transformers==4.45.0.dev0
+      - transforms3d==0.4.2
+      - trimesh==4.4.6
+      - trio==0.26.2
+      - trio-websocket==0.11.1
+      - triton==2.0.0
+      - tzdata==2024.1
+      - urllib3==2.2.2
+      - webdataset==0.2.96
+      - webencodings==0.5.1
+      - websocket-client==1.8.0
+      - werkzeug==3.0.3
+      - widgetsnbextension==4.0.11
+      - wsproto==1.2.0
+      - xyzservices==2024.6.0
+      - zarr==2.18.2
+prefix: /home/ubuntu/miniconda3/envs/maskify
